--- a/ActionScript.html
+++ b/ActionScript.html
@@ -69,6 +69,9 @@
 <li>
 <a href="http://zh-cn.mochimedia.com/">麻球网</a>
 </li>
+<li>
+<a href="http://nwhy.org/">豆腐's Blog</a>
+</li>
 </ul>
 
 
@@ -80,8 +83,14 @@
 </li>
 </ul>
 
+<h2 id="toc_1.2">Slide &amp; Share</h2>
+<ul>
+<li>
+<a href="http://www.slideshare.net/taobaoued/flashxhtml-3432665">Flash对象在(X)Html中的格式和参数及安全性</a>
+</li>
+</ul>
 
-<h2 id="toc_1.2">Books</h2>
+<h2 id="toc_1.3">Books</h2>
 <ul>
 <li>
 《Adobe ActionScript 3.0 编程》 - Adobe 官方文档。
@@ -101,23 +110,21 @@
 </ul>
 
 
-
-
-<h2 id="toc_1.3">系统剪贴板</h2>
+<h2 id="toc_1.4">系统剪贴板</h2>
 <ul>
 <li>
 <a href="http://code.google.com/p/zeroclipboard/">Zero Clipboard</a>
 </li>
 </ul>
 
-<h2 id="toc_1.4">Player</h2>
+<h2 id="toc_1.5">Player</h2>
 <ul>
 <li>
 <a href="http://www.longtailvideo.com/players/jw-flv-player/">JW Player</a> - opensource flash Player
 </li>
 </ul>
 
-<h2 id="toc_1.5">Upload File</h2>
+<h2 id="toc_1.6">Upload File</h2>
 <ul>
 <li>
 <a href="http://swfupload.org/">SWFUpload</a> ^<a href="http://code.google.com/p/swfupload/">google code</a>^
@@ -130,14 +137,14 @@
 </li>
 </ul>
 
-<h2 id="toc_1.6">Frameworks</h2>
+<h2 id="toc_1.7">Frameworks</h2>
 <ul>
 <li>
 <a href="http://www.aswing.org/">AsWing</a> <a href="http://cn.aswing.org/">中文</a>
 </li>
 </ul>
 
-<h2 id="toc_1.7">Project</h2>
+<h2 id="toc_1.8">Project</h2>
 <ul>
 <li>
 Open Flash Chart
@@ -177,10 +184,13 @@ Open Flash Chart
 <a href="http://www.taoper.com/blog/article/article/484.htm">各种各样的销售网络（FLASH中国地图，FLASH世界地图）</a>
 </li>
 </ul>
+<li>
+<a href="http://code.google.com/p/swfobject/">&lt;SWFObject&gt;</a>
+</li>
 </ul>
 
-<h2 id="toc_1.8">Notes</h2>
-<h3 id="toc_1.8.1">让Flash位于浮动层之下</h3>
+<h2 id="toc_1.9">Notes</h2>
+<h3 id="toc_1.9.1">让Flash位于浮动层之下</h3>
 <p>
 1. 将 Flash 设置为透明：
 </p>
@@ -224,7 +234,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月24日 10:46:10</p>
+    <p>本页最后修订于 2010年12月25日 23:37:26</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
