--- a/Web-Design.html
+++ b/Web-Design.html
@@ -57,6 +57,9 @@
 <li>
 <a href="http://code.google.com/p/minify/">minify</a>
 </li>
+<li>
+<a href="http://www.google.com/support/webmasters/bin/answer.py?hl=cn&amp;answer=40132">HTTP 状态代码</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">分页</h2>
@@ -173,6 +176,13 @@ window.location = "view-source:" + window.location.href;
 </li>
 </ul>
 
+<h2 id="toc_1.8">懒懒交流会</h2>
+<ul>
+<li>
+<a href="http://www.slideshare.net/taobaoued/ss-3432715">淘宝前端架构（玉伯）(懒懒交流会#38)</a>
+</li>
+</ul>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -191,7 +201,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月21日 22:05:57</p>
+    <p>本页最后修订于 2010年12月26日 12:28:24</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
