--- a/Apache.html
+++ b/Apache.html
@@ -56,6 +56,37 @@ httpd -?
 </li>
 </ul>
 
+<p>
+启用虚拟主机，让单台服务器上支持多台虚拟主机。
+</p>
+
+<p>
+%APACHE_HOME%/httpd.conf
+</p>
+<pre>
+# Virtual hosts
+Include conf/extra/httpd-vhosts.conf
+
+&lt;Directory "D:\workbench\demo\htdocs\htdocs\images"&gt;
+    AllowOverride None
+    Order allow,deny
+    Allow from all
+&lt;/Directory&gt;
+</pre>
+
+<p>
+%APACHE_HOME%/extra/httpd-vhost.conf
+</p>
+<pre>
+&lt;VirtualHost *:8888&gt;
+    ServerName static.dss.alipay.net
+    DocumentRoot D:\workbench\demo\htdocs\htdocs\static
+    DirectoryIndex index.htm index.html index.jsp default.html defautl.htm default.jsp
+    ErrorLog logs/static-error_log
+    CustomLog logs/static-access_log common
+&lt;/VirtualHost&gt;
+</pre>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -74,7 +105,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月19日 15:17:06</p>
+    <p>本页最后修订于 2010年12月28日 16:04:33</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
