--- a/C-Cpp.html
+++ b/C-Cpp.html
@@ -175,6 +175,9 @@ DLL
 <li>
 <a href="http://www.kohala.com/start/unpv12e.html">UNIX Network Programming</a>
 </li>
+<li>
+<a href="http://book.douban.com/subject/1786294/">C语言编程</a>
+</li>
 </ul>
 
 <h2 id="toc_1.6">Blog</h2>
@@ -205,7 +208,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月03日 00:37:37</p>
+    <p>本页最后修订于 2010年12月26日 12:02:17</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
