--- a/HTML5.html
+++ b/HTML5.html
@@ -31,6 +31,9 @@
 <a href="http://www.last-child.com/html5-helpful-links/">HTML5 Helpful Links</a>
 </li>
 <li>
+<a href="http://www.ibm.com/developerworks/cn/web/lp/html5/">HTML5 专题 - IBM</a>
+</li>
+<li>
 <a href="http://apirocks.com/html5/html5.html">HTML5 slides ever</a><sup><small>GFW</small></sup> (<a href="http://code.google.com/p/html5-slides/">html5-slides: HTML5 interactive slide deck</a>) ^<a href="https://twitter.com/edr">@edr</a>^
 </li>
 <li>
@@ -202,7 +205,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月21日 10:01:57</p>
+    <p>本页最后修订于 2010年12月24日 09:25:02</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
