--- a/IE.html
+++ b/IE.html
@@ -56,6 +56,11 @@
     <a href="http://www.ietester.org/">IEtester中文官方网站</a><br />
     BUG: IE Tester 的 IE6 不支持条件注释。
 </li>
+<ul>
+<li>
+<a href="http://hi.baidu.com/vickeychen/blog/item/134eb511ae8af36fcb80c403.html">IETester网页高级调试技巧</a>
+</li>
+</ul>
 <li>
 <a href="http://multipleies.en.softonic.com/">MultipleIEs</a> <a href="http://multipleies.softonic.cn/">cn</a>
     Multiple IE [BUG]<br />
@@ -97,7 +102,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年09月25日 15:03:37</p>
+    <p>本页最后修订于 2010年12月24日 16:37:09</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
