--- a/Links.html
+++ b/Links.html
@@ -179,6 +179,9 @@
 <li>
 <a href="http://freeleaf.me/">叶子</a>
 </li>
+<li>
+<a href="http://hi.baidu.com/vickeychen">鸽子</a>
+</li>
 </ul>
 
 <h2 id="toc_1.4">Softwares</h2>
@@ -230,6 +233,9 @@
 <li>
 <a href="http://lifehacker.com/">Lifehacker</a>
 </li>
+<li>
+<a href="http://www.searchtb.com/">搜索技术博客－淘宝</a>
+</li>
 </ul>
 
 <h2 id="toc_1.7">Books</h2>
@@ -257,7 +263,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月21日 22:11:09</p>
+    <p>本页最后修订于 2010年12月30日 10:37:10</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
