--- a/OS.html
+++ b/OS.html
@@ -42,6 +42,12 @@
 </ul>
 
 <h2 id="toc_1.1">Windows</h2>
+<ul>
+<li>
+<a href="http://www.levenez.com/windows/">Windows History</a>
+</li>
+</ul>
+
 <p>
 Windows 7 的用户账户控制(UAC)<br />
 控制面板 -&gt; 用户账户和家庭安全 -&gt; 用户账户 -&gt; 更改用户账户控制设置
@@ -243,6 +249,9 @@ gpedit.msc-----组策略
 <h2 id="toc_1.5">Unix</h2>
 <ul>
 <li>
+<a href="http://www.levenez.com/unix/">Unix History</a>
+</li>
+<li>
 <a href="http://net.ytu.edu.cn/share/%D7%CA%C1%CF/Unix%CD%B4%BA%DE%D5%DF%CA%D6%B2%E1.htm">UNIX痛恨者手册</a>
 </li>
 <li>
@@ -304,7 +313,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月15日 21:46:25</p>
+    <p>本页最后修订于 2010年12月26日 12:03:43</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
