--- a/Programming-Lnaguage.html
+++ b/Programming-Lnaguage.html
@@ -7,7 +7,7 @@
 <!--[if IE]><script type="text/javascript" src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/vim-like.css" />
-<title>Gtalk - 闲耘™.Wiki</title>
+<title>Programming-Lnaguage - 闲耘™.Wiki</title>
 </head>
 <body>
 <div id="wrapper">
@@ -25,90 +25,25 @@
 </header>
 <article>
 
-<h1 id="toc_1">Google Talk(Gtalk)</h1>
+<h1 id="toc_1">编程语言</h1>
 <ul>
 <li>
-<a href="http://www.google.com/talk/">Google Chat</a>
+<a href="http://www.levenez.com/lang/">Computer Languages History</a>
 </li>
 <li>
-<a href="http://www.google.com/talk/service/badge/New">Create Google Talk chatback badge</a>
+<a href="http://oreilly.com/pub/a/oreilly/news/languageposter_0504.html">The History of Programming Languages</a>
 </li>
 <li>
-<a href="http://www.customizetalk.com/">Customize Talk - Google Talk addons skins tricks tutorials downloads bots forum secrets tweaks</a> - 一些关于 GTalk 的资源。
+<a href="http://zh.wikipedia.org/zh-cn/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80%E6%AD%B7%E5%8F%B2">编程语言历史</a>
 </li>
 <li>
-<a href="http://marguerite.su/login-gtalk-using-google-app-account-final-edition/">Google App Account登录Gtalk教程之最终版</a>
+<a href="http://zh.wikipedia.org/zh-cn/%E7%A8%8B%E5%BA%8F%E8%AE%BE%E8%AE%A1%E8%AF%AD%E8%A8%80">编程语言</a>
 </li>
 <li>
-<a href="http://www.google.com/support/chat/bin/topic.py?hl=en&amp;topic=24670">Other Client for Google Chat(Google Talk)</a>
-</li>
-</ul>
-
-
-<h2 id="toc_1.1">手机(mobile)</h2>
-<ul>
-<li>
-<a href="http://www.reporo.com/">Reporo</a>
+<a href="http://zh.wikipedia.org/zh-cn/%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E5%88%97%E8%A1%A8">程序设计语言列表</a>
 </li>
 <li>
-<a href="http://mgtalk.sourceforge.net/">MGoogle Talk</a>
-</li>
-<li>
-<a href="http://www.talkonaut.com/">Talkonaut</a>
-</li>
-<li>
-<a href="http://www.eqo.com/">EQO</a>
-</li>
-<li>
-<a href="https://www.kenengba.com/post/265.html">介绍几款手机上免费的Gtalk软件</a>
-</li>
-</ul>
-
-<h2 id="toc_1.2">GTalk 机器人</h2>
-<ul>
-<li>
-<a href="http://paranimage.com/16-gtalk-robot-robot-help-you-better-use-google-talk/">16个GTalk机器人 (Robot)助你更好使用Google Talk</a>
-</li>
-<li>
-zh2en@bot.talk.google.com - 中文2En
-</li>
-<li>
-en2zh@bot.talk.google.com - En2中文
-</li>
-</ul>
-
-<h2 id="toc_1.3">群聊支持</h2>
-<ul>
-<li>
-<a href="Chatterous.html">Chatterous</a>
-</li>
-<li>
-<a href="Party-Chat.html">Party-Chat</a>
-</li>
-<li>
-<a href="http://code.google.com/p/gtalkgroups/">GtalkGroups</a>
-    <a href="http://io43.com/io43.GtalkGroup/cmds/">命令</a>
-</li>
-<li>
-<a href="http://www.neoease.com/two-ways-to-create-google-talk-groups/">建立 Gtalk 群聊的两种方法</a>
-</li>
-<li>
-<a href="http://huaidan.org/archives/495.html">Gtalk群聊 and 架建Gtalk群的方法</a> - 自己启动服务器程序。
-</li>
-<li>
-[<a href="http://www.91android.com/bbs/viewthread.php?tid=38721">http://www.91android.com/bbs/viewthread.php?tid=38721</a> 新建的Gtalk群，一起来rock吧】 - 介绍了修改显示昵称的方法。
-</li>
-<li>
-<a href="http://www.xyforever.org/ash/post/gtalk-conference-bot-and-skin-theme.html">Gtalk好友太少？加入Gtalk群聊！教你创建GTALK群（下载）包含几套皮肤</a>
-</li>
-<li>
-<a href="http://tiant.me/archives/22">GAE搭建gtalk群！</a>
-</li>
-<li>
-<a href="http://ioio.name/gtalk-conference-bot.html">GTalk 群机器人</a>
-</li>
-<li>
-<a href="http://coders.meta.net.nz/~perry/jabber/confbot.php">Google Talk: Conference Bot</a>
+<a href="http://people.ku.edu/~nkinners/LangList/Extras/langlist.htm">The Language List</a>
 </li>
 </ul>
 
@@ -130,7 +65,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月28日 09:51:39</p>
+    <p>本页最后修订于 2010年12月26日 11:55:40</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
