--- a/Python.html
+++ b/Python.html
@@ -75,7 +75,12 @@
     <a href="http://www.vim.org/scripts/script.php?script_id=2441">Pyflakes-vim</a>,
     <a href="http://github.com/kevinw/pyflakes-vim">src</a>,
     <a href="http://pychecker.sourceforge.net/">Pychecker</a>,
-    <a href="http://www.vim.org/scripts/script.php?script_id=891">PyLint</a>
+</li>
+<li>
+<a href="http://www.logilab.org/project/pylint">PyLint</a>
+    <a href="http://pypi.python.org/pypi/pylint">2</a>
+    <a href="http://www.vim.org/scripts/script.php?script_id=891">for Vim</a>
+    <a href="http://www.ibm.com/developerworks/cn/linux/l-cn-pylint/index.html?ca=drs-cn-1217">如何使用 Pylint 来规范 Python 代码风格</a>
 </li>
 <li>
 <a href="http://www.jetbrains.com/pycharm/">Python IDE with Django</a>
@@ -100,7 +105,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月29日 23:16:48</p>
+    <p>本页最后修订于 2010年12月23日 10:16:52</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
