--- a/YUI.html
+++ b/YUI.html
@@ -60,12 +60,29 @@
 <li>
 <a href="http://www.yuicoder.com/">YUI Coder</a>
 </li>
+<li>
+<a href="Combo.html">Combo</a>
+</li>
 </ul>
 
-<h2 id="toc_1.1">Project</h2>
+<h2 id="toc_1.1">Tools</h2>
 <ul>
 <li>
-<a href="http://code.google.com/p/kissy/">kissy</a>
+<a href="http://smallerapp.com/">Smaller</a> - Batch minify CSS and JavaScript on the Mac
+</li>
+</ul>
+
+<h2 id="toc_1.2">Slide &amp; Share</h2>
+<ul>
+<li>
+<a href="http://www.slideshare.net/josephj/yui-3x-presentation">YUI 3.x 介紹</a>
+</li>
+</ul>
+
+<h2 id="toc_1.3">Project</h2>
+<ul>
+<li>
+<a href="kissy.html">kissy</a>
 </li>
 <li>
 <a href="http://github.com/cubee/cubee.github.com">Cubee</a>
@@ -93,7 +110,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月05日 07:56:59</p>
+    <p>本页最后修订于 2010年12月25日 23:38:07</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
