--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 </li>
 <ul>
 <li>
-<a href="kissy.html">kissy</a> | <a href="http://arale.alipay.net/">Arale</a>
+<a href="kissy.html">Kissy - Taobao</a> | <a href="http://arale.alipay.net/">Arale - Alipay</a> | <a href="http://tangram.baidu.com/">Tangram - Baidu</a>
+</li>
+<li>
+<a href="http://www.commonjs.org/">CommonJS</a>
 </li>
 </ul>
 <li>
@@ -48,9 +51,6 @@
 </li>
 <li>
 <a href="HTML.html">HTML</a> | <a href="HTML5.html">HTML5</a>(<a href="Canvas-SVG-VML.html">Canvas-SVG-VML</a>) | <a href="HTML-Escape.html">HTML特殊字符</a> |
-    <a href="Microformats.html">Microformats</a> | <a href="XML.html">XML</a> | <a href="JSON.html">JSON</a> | <a href="YAML.html">YAML</a><br />
-</li>
-<li>
 <div class="toc">
 <ul>
 <li><a href="#toc_1">闲耘™. Wiki</a></li>
@@ -76,6 +76,9 @@
 </ul>
 </ul>
 </div>
+    <a href="Microformats.html">Microformats</a> | <a href="XML.html">XML</a> | <a href="JSON.html">JSON</a> | <a href="YAML.html">YAML</a><br />
+</li>
+<li>
 <a href="LaTeX.html">LaTeX</a> | <a href="Wiki.html">Wiki</a> | <a href="Markdown.html">Markdown</a> | <a href="Textile.html">Textile</a> | <a href="reStructuredText.html">reStructuredText</a>
     <a href="http://antbsd.twbbs.org/~ant/wordpress/?p=2720">淺談輕量級標記語言</a>
 </li>
@@ -94,6 +97,9 @@
 </li>
 <li>
 <a href="RegExp.html">正则表达式(RegExp)</a> | <a href="Shell.html">Shell</a> | <a href="AutoHotKey.html">AutoHotKey</a>
+</li>
+<li>
+<a href="Programming-Lnaguage.html">编程语言</a>
 </li>
 <li>
 <a href="REST.html">REST</a>
@@ -177,6 +183,10 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 <a href="codes-server.html">代码托管服务</a>
 </li>
 <li>
+<a href="http://codereview.appspot.com/">Rietveld Code Review Tool</a>
+        <a href="http://code.google.com/p/rietveld/">@google.code</a>
+</li>
+<li>
 <a href="http://j.mp/douban-javascript">豆瓣Javascript代码风格规范</a> | <a href="http://j.mp/douban-css">豆瓣CSS开发规范</a>
 </li>
 </ul>
@@ -234,6 +244,12 @@ Apps Engine
 <li>
 <a href="http://gs.statcounter.com/">StatCounter Global Stats</a>
 </li>
+<li>
+瀏覽器的發展簡史：<a href="http://moztw.org/foxmosa/download/2009_Browser_History_zh.pdf">中文 PDF 版</a>
+        <a href="http://moztw.org/foxmosa/download/2009_Browser_History_zh.png">中文 PNG 版</a>
+        <a href="http://www.foxkeh.com/downloads/history/history-original.pdf">En PDF</a>
+        <a href="http://moztw.org/foxmosa/download/2006_Firefox_History_zh.png">2006 中文 PNG</a>
+</li>
 </ul>
 <h3 id="toc_1.5.2">编辑器(IDE/Editor)</h3>
 <ul>
@@ -279,6 +295,10 @@ Online IDE/Editor
 </li>
 <li>
 <a href="http://sketchup.google.com/">Google Sketchup</a> | <a href="http://asymptote.sourceforge.net/">Asymptote</a>
+        <a href="http://www.graphviz.org/">GraphViz</a>
+</li>
+<li>
+<a href="http://markup.io/">Markup.io</a> - 保存为书签，到任意一网页点击该书签，或地址栏执行其脚本，然后就可以使用右上角的工具在网页上画图了。
 </li>
 <li>
 <a href="Gantt-chart.html">甘特图</a>
@@ -441,6 +461,9 @@ PDF
 <ul>
 <li>
 <a href="http://www.primopdf.com/">PDF Converter</a> <a href="http://www.primopdf.com/online.aspx">Online</a>
+</li>
+<li>
+<a href="http://html-pdf-convert.com/">HTML-PDF-Convert</a> - 将任意网页转成 PDF 格式，支持中文。
 </li>
 <li>
 <a href="http://paranimage.com/8-html-to-pdf-online-tools/">8款HTML转PDF在线工具</a>
@@ -1021,6 +1044,28 @@ Web Page
 </ul>
 </ul>
 <li>
+<a href="https://privnote.com/">Privnote</a> - 私密笔记。
+</li>
+<li>
+收藏夹
+</li>
+<ul>
+<li>
+<a href="http://www.woaide.com/">我爱的网址站</a>
+</li>
+</ul>
+<li>
+<a href="http://www.re-print.me/">ReprintMe</a>
+</li>
+<li>
+流量统计
+</li>
+<ul>
+<li>
+<a href="http://www.linezing.com/">量子统计</a>
+</li>
+</ul>
+<li>
 <a href="http://www.pledgebank.com/">祈愿行</a>
 </li>
 <li>
@@ -1068,7 +1113,7 @@ Web Page
 <a href="http://jobsdigg.com/">jobsDigg</a>
 </li>
 <li>
-<a href="Books.html">书籍(books)</a> | <a href="English.html">英语</a>
+<a href="Books.html">书籍(books)</a> | <a href="English.html">英语</a> | <a href="Amazon-Kindle.html">Amazon-Kindle</a>
 </li>
 <li>
 <a href="edu.html">教育</a> | <a href="Financial.html">金融/财务</a> | <a href="math.html">数学</a> | <a href="National-Geographic.html">国家地理</a> | <a href="Magazine.html">杂志</a> |
@@ -1086,10 +1131,7 @@ Web Page
 </li>
 </ul>
 <li>
-<a href="iGo.html">圍棋</a> | <a href="Chess.html">象棋</a> | <a href="Harmonica.html">口琴</a> | <a href="sports.html">体育运动</a>
-</li>
-<li>
-<a href="Games.html">游戏</a>
+<a href="Games.html">游戏</a> | <a href="iGo.html">圍棋</a> | <a href="Chess.html">象棋</a> | <a href="Harmonica.html">口琴</a> | <a href="sports.html">体育运动</a>
 </li>
 <li>
 <a href="Online-TVs.html">网络电视(TV)</a> | <a href="video.html">影视</a> | <a href="music.html">音乐</a> | <a href="VoIP.html">网络电话</a>
@@ -1145,7 +1187,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月22日 00:10:16</p>
+    <p>本页最后修订于 2010年12月26日 20:25:36</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
