--- a/mobile.html
+++ b/mobile.html
@@ -37,17 +37,19 @@
 
 
 <h2 id="toc_1.1"><a href="http://www.hzft.gov.cn">国税地税</a></h2>
-
-<p>
+<ul>
+<li>
 <a href="http://www.hzft.gov.cn/jpm/portal?action=infoDetailAction&amp;eventSubmit_doInfodetail=doInfodetail&amp;id=36312&amp;flag=123456">发票自动语音查询</a>
-</p>
+    <a href="http://www.hzft.gov.cn/jpm/FileService/2010_1_20_9_36_47Addition.gif?filename=2010_1_20_9_36_47Addition.gif&amp;contentType=image/gif">http://www.hzft.gov.cn/jpm/FileService/2010_1_20_9_36_47Addition.gif?filename=2010_1_20_9_36_47Addition.gif&amp;contentType=image/gif</a>
+</li>
+<li>
+<a href="http://www.zj-l-tax.gov.cn/">浙江地税</a>
+    <a href="http://etax.zjds.gov.cn/index.jsp">因特网办税服务系统</a> - 超级难用。
+</li>
+</ul>
 
 <p>
-浙江杭州国税发票中奖后，拨打 <code>12366</code> 并按 <code>161</code>，然后输入发票代码（非之下的发票号码）和密码。
-</p>
-
-<p>
-<a href="http://www.hzft.gov.cn/jpm/FileService/2010_1_20_9_36_47Addition.gif?filename=2010_1_20_9_36_47Addition.gif&amp;contentType=image/gif">http://www.hzft.gov.cn/jpm/FileService/2010_1_20_9_36_47Addition.gif?filename=2010_1_20_9_36_47Addition.gif&amp;contentType=image/gif</a>
+浙江杭州国税发票中奖后，拨打 <code>12366</code> 并按 <code>1621</code>，然后输入发票代码，再输入下面的发票号码，密码。
 </p>
 
 <script type="text/javascript">
@@ -68,7 +70,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年06月05日 13:01:02</p>
+    <p>本页最后修订于 2010年12月28日 11:06:54</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
