--- a/music.html
+++ b/music.html
@@ -31,6 +31,9 @@
 <a href="http://cn.last.fm/">Last.fm</a>
 </li>
 <li>
+<a href="http://douban.fm/">豆瓣电台</a>
+</li>
+<li>
 <a href="http://music.sina.com/">乐库 - 新浪网</a> <a href="http://music.sina.com.cn/">2</a>
 </li>
 <li>
@@ -38,6 +41,9 @@
 </li>
 <li>
 <a href="http://www.yinyuetai.com/">音悦台</a>
+</li>
+<li>
+<a href="http://www.muzicons.com/">Muzicons</a>
 </li>
 </ul>
 
@@ -67,6 +73,19 @@
 <li>
 <a href="http://music.sina.com.cn/yueku/s/10750.html">久石让(Joe Hisaishi)</a>
 </li>
+<ul>
+<li>
+《太阳照常升起》
+</li>
+<ul>
+<li>
+狩猎者进行曲
+</li>
+<li>
+太阳照常升起
+</li>
+</ul>
+</ul>
 <li>
 <a href="http://music.sina.com.cn/yueku/s/26580.html">神思者(S.E.N.S)</a>
 </li>
@@ -101,6 +120,12 @@ Asha - Sailing On The Silk Blue Sea
 </li>
 <li>
 Australis - Purple Dreams
+</li>
+<li>
+Catherine Lara - Unity
+</li>
+<li>
+Chris Spheeris - Sapphire
 </li>
 <li>
 Clannad - A Bridge That Carries Us Over
@@ -170,7 +195,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月17日 11:01:03</p>
+    <p>本页最后修订于 2010年12月29日 16:20:23</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
