--- a/Alipay-SofaMVC.html
+++ b/Alipay-SofaMVC.html
@@ -164,7 +164,7 @@
 
 <p>
 <strong>注：</strong>
-home 之外的 Car 必须 Java 类和 vm 访问的文件同名。
+home 之外的 Bunlde(Bunlde 和 Car 没明白是什么意思？) 必须 Java 类和 vm 访问的文件同名。
 某些版本的 Sofa 貌似是用过 <code>@RequestMapping("/index.htm")</code> 隐私的，而无需类名相同。
 困惑。
 </p>
@@ -206,7 +206,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月30日 13:44:41</p>
+    <p>本页最后修订于 2010年12月30日 13:51:27</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
