--- a/Velocity.html
+++ b/Velocity.html
@@ -95,6 +95,10 @@
 <h2 id="toc_1.1">Tools</h2>
 <ul>
 <li>
+<a href="http://www.vim.org/scripts/script.php?script_id=541">velocity.vim : Syntax file for velocity templates</a>
+    <a href="https://github.com/vim-scripts/velocity.vim">@github</a>
+</li>
+<li>
 <a href="http://propsorter.sourceforge.net/veloeclipse/">VeloEclipse</a>
     based on <a href="http://veloedit.sourceforge.net/">VeloEdit</a> <br />
     Installing:
@@ -201,7 +205,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月30日 11:12:04</p>
+    <p>本页最后修订于 2010年12月30日 13:47:59</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
