--- a/ActionScript.html
+++ b/ActionScript.html
@@ -43,6 +43,10 @@
 <a href="http://zh.wikipedia.org/zh-cn/ActionScript">ActionScript@wikipedia</a>
 </li>
 <li>
+<a href="http://baike.baidu.com/view/7641.htm">Flash</a> - 百度百科
+    <a href="http://baike.baidu.com/view/9376.htm">ActionScript</a>
+</li>
+<li>
 <a href="http://blog.harrspy.com/developas2_with_aswing_fd">用FlashDevelop+aswing开发AS2程序</a>
 </li>
 <li>
@@ -61,9 +65,6 @@
 <a href="http://www.klstudio.com/">Kinglong's Blog</a> - 专注研究 Flash, FMS, ActionScript, Javascript, Java, C# 等相关技术。
 </li>
 <li>
-<a href="http://zh.wikipedia.org/zh-cn/ActionScript">ActionScript@wikipedia</a>
-</li>
-<li>
 <a href="http://www.isdada.com/">达达's Blog</a>
 </li>
 <li>
@@ -72,8 +73,10 @@
 <li>
 <a href="http://nwhy.org/">豆腐's Blog</a>
 </li>
+<li>
+<a href="http://flash.qq.com/">腾讯动画频道</a>
+</li>
 </ul>
-
 
 
 <h2 id="toc_1.1">Tools</h2>
@@ -92,6 +95,11 @@
 
 <h2 id="toc_1.3">Books</h2>
 <ul>
+<li>
+<a href="http://help.adobe.com/zh_CN/ActionScript/3.0_ProgrammingAS3/">Adobe Flash 的 Adobe ActionScript 3.0 编程</a>
+    <a href="http://help.adobe.com/zh_TW/ActionScript/3.0_ProgrammingAS3/">繁体</a>
+    <a href="http://help.adobe.com/zh_CN/AS3LCR/Flash_10.0/index.html">《ActionScript 3.0 语言和组件参考》</a>
+</li>
 <li>
 《Adobe ActionScript 3.0 编程》 - Adobe 官方文档。
 </li>
@@ -234,7 +242,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月25日 23:37:26</p>
+    <p>本页最后修订于 2011年01月06日 00:14:48</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
