--- a/CSS.html
+++ b/CSS.html
@@ -88,6 +88,9 @@
 <li>
 <a href="http://www.blueidea.com/tech/web/2008/6313.asp">连续字符自动换行的解决方案</a>
 </li>
+<li>
+<a href="http://www.css-101.org/">CSS 101</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Calendar stamp</h2>
@@ -317,7 +320,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月20日 22:28:18</p>
+    <p>本页最后修订于 2011年01月12日 10:30:36</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
