--- a/Links.html
+++ b/Links.html
@@ -58,9 +58,6 @@
 <li>
 <a href="http://www.aliued.com/">ALI_UED</a>
 </li>
-<li>
-<a href="http://www.uedmagazine.com/ued/">UED Magazine</a>
-</li>
 </ul>
 
 <h2 id="toc_1.3">Web Design(Person)</h2>
@@ -150,7 +147,7 @@
 <a href="http://blog.zhaojie.me">老赵点滴 - 追求编程之美</a>
 </li>
 <li>
-<a href="http://blog.csdn.net/aimingoo/">愚公</a>
+<a href="http://blog.csdn.net/aimingoo/">愚公</a> - 周爱民
 </li>
 <li>
 <a href="http://blog.csdn.net/myan">孟岩</a>
@@ -181,6 +178,27 @@
 </li>
 <li>
 <a href="http://hi.baidu.com/vickeychen">鸽子</a>
+</li>
+<li>
+<a href="http://www.zipeng.info/">kun的记事本</a> - 乔福，子鹏。
+</li>
+<li>
+<a href="http://angela.ucdchina.com/">Angela@UE</a>
+</li>
+<li>
+<a href="http://imethan.com/">王森</a>
+</li>
+<li>
+<a href="http://rockux.com/">RockUX</a>
+</li>
+<li>
+<a href="http://www.pushiming.com/blog/">他的博客</a> - 法海
+</li>
+<li>
+<a href="http://www.uedmagazine.com/ued/">UED Magazine</a>
+</li>
+<li>
+<a href="http://www.songwa.org/">王松</a>
 </li>
 </ul>
 
@@ -236,6 +254,9 @@
 <li>
 <a href="http://www.searchtb.com/">搜索技术博客－淘宝</a>
 </li>
+<li>
+<a href="http://www.baibanbao.net/">白板报</a>
+</li>
 </ul>
 
 <h2 id="toc_1.7">Books</h2>
@@ -263,7 +284,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月30日 10:37:10</p>
+    <p>本页最后修订于 2011年01月11日 10:25:34</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
