--- a/OS.html
+++ b/OS.html
@@ -288,7 +288,13 @@ gpedit.msc-----组策略
 </li>
 </ul>
 
-<h2 id="toc_1.7">Books</h2>
+<h2 id="toc_1.7">Mac</h2>
+<ul>
+<li>
+<a href="http://www.tip4mac.com/">Tip2Mac</a>
+</li>
+</ul>
+<h2 id="toc_1.8">Books</h2>
 <ul>
 <li>
 <a href="http://linuxcommand.org/tlcl.php">The Linux Command Line</a> (pdf)
@@ -313,7 +319,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月26日 12:03:43</p>
+    <p>本页最后修订于 2011年01月03日 18:49:04</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
