--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h2 id="toc_1.1">Programming</h2>
 <ul>
 <li>
-<a href="Web-Design.html">Web-Design</a> | <a href="Links.html">Links</a>
+<a href="Web-Design.html">Web-Design</a> | <a href="Links.html">Links</a> | <a href="MIME-Type.html">MIME-Type</a>
 </li>
 <li>
 <a href="JavaScript.html">JavaScript</a> | <a href="jQuery.html">jQuery</a> | <a href="YUI.html">YUI</a> | <a href="Prototype.html">Prototype</a> | <a href="MooTools.html">MooTools</a> |
@@ -129,7 +129,7 @@ Code Prettify/Syntax Highligjht
 <a href="Email.html">Email</a> | <a href="Images.html">Images</a>
 </li>
 <li>
-<a href="Google.html">Google</a> | <a href="http://msdn.microsoft.com/en-us/library">MSDN Library</a> | <a href="Baidu.html">百度</a>
+<a href="Google.html">Google</a> | <a href="http://msdn.microsoft.com/en-us/library">MSDN Library</a> | <a href="Baidu.html">百度</a> | <a href="Taobao.html">淘宝</a>
 </li>
 <li>
 <a href="Compiler.html">编译器</a> | <a href="Algorithm.html">算法</a>
@@ -150,7 +150,7 @@ Code Prettify/Syntax Highligjht
 <ul>
 <li>
 <a href="data-visualization.html">数据可视化</a> | <a href="BI.html">商业智能</a> | <a href="database.html">数据库(Database)</a> |
-    <a href="NoSQL.html">NoSQL</a>
+    <a href="Data-Mining.html">数据挖掘</a> | <a href="NoSQL.html">NoSQL</a>
     Oracle | MySQL | mongodb | <a href="http://www.postgresql.org/">PostgreSQL</a> | SQLite | couchdb
 </li>
 <li>
@@ -264,7 +264,10 @@ Apps Engine
 <a href="http://winmerge.org/">WinMerge</a> <a href="http://sourceforge.net/projects/winmerge/">2</a> |
         <a href="http://www.scootersoftware.com/">Beyond Compare</a> |
         <a href="http://www.ultraedit.com/products/ultracompare.html">UltraCompare</a> |
-        <a href="diff.html">差异(Diff)</a> | <a href="Patch.html">补丁(Patch)</a>
+        <a href="http://www.vim.org/scripts/script.php?script_id=102">DirDiff.vim</a>
+</li>
+<li>
+<a href="diff-patch.html">差异(diff) &amp; 补丁(patch)</a>
 </li>
 <li>
 流编辑器(Stream Editor) (<a href="Sed.html">Sed</a> | <a href="awk.html">awk</a>)
@@ -694,6 +697,9 @@ Windows Registry Editor Version 5.00
 </li>
 <ul>
 <li>
+<a href="rsync.html">rsync</a>
+</li>
+<li>
 <a href="Allway Sync.html">Allway Sync</a> | <a href="SyncToy.html">SyncToy</a> <a href="http://www.cis.upenn.edu/~bcpierce/unison/">Unison</a>
 </li>
 </ul>
@@ -1004,7 +1010,11 @@ SNS
 </li>
 <ul>
 <li>
-<a href="http://t.co/">t.co(Twitter)</a> | <a href="http://goo.gl/">goo.gl(Google)</a>
+<a href="http://goo.gl/">goo.gl(Google)</a> |
+        <a href="http://code.google.com/intl/zh-CN/apis/urlshortener/">Google URL Shortener API</a>
+</li>
+<li>
+<a href="http://t.co/">t.co(Twitter)</a>
         (<a href="http://gaigalas.net/lab/googl">Gaigalas</a>, <a href="http://jsbin.com/idalu3">Jsbin</a>) |
         <a href="http://wp.me">wp.me</a> | <a href="http://bit.ly/">bit.ly</a> |
         <a href="http://su.pr/">Su.pr</a> | <a href="http://a.md/">A.MD</a>
@@ -1052,6 +1062,9 @@ Web Page
 <ul>
 <li>
 <a href="http://www.woaide.com/">我爱的网址站</a>
+</li>
+<li>
+<a href="http://ipaddh.com/">iPad 网址导航</a>
 </li>
 </ul>
 <li>
@@ -1187,7 +1200,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月26日 20:25:36</p>
+    <p>本页最后修订于 2011年01月13日 18:58:54</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
