--- a/Agile-Development.html
+++ b/Agile-Development.html
@@ -53,6 +53,9 @@
 <a href="http://zh.wikipedia.org/zh-cn/Scrum">@wikipedia</a>
 </li>
 <li>
+<a href="http://www.scrum.org/">Scrum.org</a>
+</li>
+<li>
 <a href="http://www.slideshare.net/rodrigoi/scrum-en-15-minutos">Scrum en 15 minutos</a>
 </li>
 <li>
@@ -81,7 +84,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月24日 10:01:42</p>
+    <p>本页最后修订于 2011年01月05日 09:33:16</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
