--- a/Blogger.html
+++ b/Blogger.html
@@ -28,13 +28,18 @@
 <h1 id="toc_1">Blogger</h1>
 <ul>
 <li>
-<a href="http://wordpress.org/">Wordpress</a> - 也有多 Author 支持。
+<a href="http://wordpress.org/">Wordpress(php)</a> - 也有多 Author 支持。
 </li>
 <li>
 <a href="http://wfans.org/blog/">Wordpress 中文团队</a>
 </li>
 <li>
 <a href="http://typecho.org/">Typecho</a>
+</li>
+<li>
+<a href="http://www.movabletype.org/">MoveableType(perl)</a>
+    <a href="https://github.com/movabletype/movabletype">@github</a>
+    <a href="http://openmelody.org/">OpenSource</a>
 </li>
 </ul>
 
@@ -65,6 +70,9 @@
 </li>
 <li>
 <a href="http://www.blogsome.com/">Blogsome</a> - 已禁止注册。
+</li>
+<li>
+<a href="http://www.blog.com/">Blog.com</a> - 基于 WP 的博客系统，带广告。
 </li>
 </ul>
 
@@ -110,7 +118,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月29日 14:03:01</p>
+    <p>本页最后修订于 2011年01月11日 22:27:19</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
