--- a/Books.html
+++ b/Books.html
@@ -52,6 +52,12 @@
 <a href="http://www.gutenberg.org/">古藤堡计划</a> <a href="http://www.gutenberg.org/browse/languages/zh">中文</a>
     <a href="http://zh.wikipedia.org/zh-cn/%E5%8F%A4%E8%85%BE%E5%A0%A1%E8%AE%A1%E5%88%92">@wikipedia</a>
 </li>
+<li>
+<a href="http://shucang.com/">书仓</a>
+</li>
+<li>
+<a href="http://poems.tang.net/">全唐诗</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Open Source</h2>
@@ -90,6 +96,13 @@
 </li>
 </ul>
 
+<h2 id="toc_1.4">延伸阅读</h2>
+<ol>
+<li>
+<a href="Amazon-Kindle.html">Amazon-Kindle</a>
+</li>
+</ol>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -108,7 +121,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月16日 15:39:37</p>
+    <p>本页最后修订于 2011年01月13日 00:26:12</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
