--- a/DjVu.html
+++ b/DjVu.html
@@ -36,6 +36,18 @@
 <li>
 <a href="http://windjview.sourceforge.net/">WinDjView Homepage</a> -- 有支持 Windows 和 Mac 的阅读器。
 </li>
+<li>
+<a href="http://www.trustfm.net/GeneralTools/SoftwarePdfToDjvuGUI.php?b2=1">Pdf To Djvu GUI v. 2.1(Freeware)</a>
+</li>
+<li>
+<a href="http://hi.baidu.com/shuding/blog/item/5b21f1cd35f985590eb34537.html">DjVu Small v0.3.1 简体中文版(OCR功能增强)</a>
+</li>
+<li>
+<a href="http://hi.baidu.com/shuding/blog/category/%C8%ED%BC%FE%BD%E9%C9%DC">蜀丁#软件介绍</a>
+</li>
+<li>
+<a href="http://code.google.com/p/pdf2djvu/">PDF to DjVu converter</a>
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -56,7 +68,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年08月07日 10:07:23</p>
+    <p>本页最后修订于 2011年01月04日 11:28:56</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
