--- a/Flex.html
+++ b/Flex.html
@@ -239,7 +239,7 @@ au BufNewFile,BufRead *.as set filetype=actionscript
 </pre>
 </li>
 <li>
-编译：mxmlc test.as 或 mxmlc test.mxml
+编译：<code>mxmlc test.as</code> 或 <code>mxmlc test.mxml</code>
 </li>
 </ol>
 
@@ -261,7 +261,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月14日 10:10:16</p>
+    <p>本页最后修订于 2011年01月05日 23:48:50</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
