--- a/HTML.html
+++ b/HTML.html
@@ -109,6 +109,12 @@
 <li>
 <a href="http://www.aaronsw.com/2002/html2text/">html2text</a>
 </li>
+<li>
+<a href="http://lint.brihten.com/html/">HTML Lint</a>
+</li>
+<li>
+<a href="http://validator.w3.org/">The W3C Markup Validator Service</a>
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -129,7 +135,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月13日 17:18:05</p>
+    <p>本页最后修订于 2011年01月04日 14:08:22</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
