--- a/HTML5.html
+++ b/HTML5.html
@@ -89,6 +89,9 @@ webforms
 <li>
 <a href="http://www.modernizr.com/">Modernizr</a> - 检测浏览器对 HTML5 各种特性的支持情况，并在 &lt;html&gt; 标签上添加对应的 class 样式名。
 </li>
+<li>
+<a href="http://arborjs.org/">arbor.js</a>
+</li>
 </ul>
 
 <h2 id="toc_1.2">Demo</h2>
@@ -110,6 +113,9 @@ webforms
 </li>
 <li>
 <a href="http://labs.codecomputerlove.com/FlashVsHtml5/">乒乓球游戏：左边用Flash，右边用HTML5</a>
+</li>
+<li>
+<a href="http://www.20thingsilearned.com/">20 Things I Learned About Browsers and the Web</a>
 </li>
 </ul>
 
@@ -205,7 +211,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月24日 09:25:02</p>
+    <p>本页最后修订于 2011年01月13日 09:40:20</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
