--- a/JavaScript.html
+++ b/JavaScript.html
@@ -50,6 +50,18 @@
 <li>
 <a href="http://js1k.com/">JS1K, 1k Javascript contest</a>
 </li>
+<li>
+<a href="http://jsmock.sourceforge.net/">JSMock</a>
+    <a href="http://jsmock.codeplex.com/">JSMock</a>
+    <a href="https://github.com/termie/node-jsmock">node-jsmock</a>
+    <a href="http://code.google.com/p/jsmock/">@google.code</a>
+</li>
+<li>
+<a href="http://siliconforks.com/jscoverage/">JSCoverage</a>
+</li>
+<li>
+<a href="http://code.google.com/p/jsdt/">jsdt</a> - Debug javascript in ie,firefox,chrome,safari,opera and all browsers support ajax
+</li>
 </ul>
 
 <h2 id="toc_1.1">Syntax</h2>
@@ -74,6 +86,9 @@
 <ul>
 <li>
 <a href="http://zh.wikipedia.org/zh-cn/%E9%97%AD%E5%8C%85_(%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6)">闭包 (计算机科学)</a>
+</li>
+<li>
+<a href="http://jibbering.com/faq/notes/closures/">Javascript Closures</a>
 </li>
 <li>
 <a href="http://roshanca.com/?p=153">什么是闭包</a>
@@ -157,7 +172,7 @@ tr.rowIndex
 </li>
 </ul>
 
-<h2 id="toc_1.6">Editor</h2>
+<h2 id="toc_1.6">WYSIWYG Editor</h2>
 <ul>
 <li>
 <a href="http://code.google.com/p/xheditor/">XHEditor</a>
@@ -386,7 +401,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月25日 15:45:47</p>
+    <p>本页最后修订于 2011年01月13日 21:54:40</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
