--- a/MIME-Type.html
+++ b/MIME-Type.html
@@ -7,7 +7,7 @@
 <!--[if IE]><script type="text/javascript" src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/vim-like.css" />
-<title>VLC - 闲耘™.Wiki</title>
+<title>MIME-Type - 闲耘™.Wiki</title>
 </head>
 <body>
 <div id="wrapper">
@@ -25,34 +25,25 @@
 </header>
 <article>
 
-<h1 id="toc_1">VLC</h1>
+<h1 id="toc_1">MIME Type</h1>
+<h2 id="toc_1.1">JSON</h2>
 <ul>
 <li>
-<a href="http://www.videolan.org/">VLC</a>
+<a href="http://www.ietf.org/rfc/rfc4627.txt">rfc4627.txt</a>
 </li>
 </ul>
 
-<h2 id="toc_1.1">中文字幕支持</h2>
-<ul>
-<li>
-<a href="http://hi.baidu.com/rhskyubuntu/blog/item/bb8272356d11f9bed1a2d300.html">VLC乱码解决方案</a>
-</li>
-</ul>
-<p>
-首选项 -&gt; 字幕和OSD：
-</p>
-<blockquote>
-字幕语言：
-首先的字幕语言: C:\WINDOWS\Fonts\SIMSUN.TTC
-默认编码：简体中文 Unix (EUC-CN)
-显示设置：
-字体：C:\WINDOWS\Fonts\SIMSUN.TTC
-</blockquote>
+<pre>
+application/json
+application/x-javascript
+text/javascript
+text/x-javascript
+text/x-json
+</pre>
 
-
-<p>
-播放高清 .rmvb 会卡的问题，目前解决方案未知。
-</p>
+<pre>
+response.setContentType("text/html;charset=utf-8");
+</pre>
 
 <script type="text/javascript">
 function onSearch(){
@@ -72,7 +63,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月08日 20:33:59</p>
+    <p>本页最后修订于 2011年01月12日 10:58:56</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
