--- a/Picasa.html
+++ b/Picasa.html
@@ -27,7 +27,8 @@
 
 <h1 id="toc_1">Picasa</h1>
 <p>
-<a href="http://picasa.google.com/">Picasa</a> 是一款非常优秀的图片管理软件，支持简单的编辑功能，便捷的查看方式，和组织管理能力。
+<a href="http://picasa.google.com/">Picasa</a> 是一款非常优秀的图片管理软件，支持简单的编辑功能，
+便捷的查看方式，和组织管理能力。
 </p>
 
 <p>
@@ -79,7 +80,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年03月26日 14:47:18</p>
+    <p>本页最后修订于 2011年01月13日 13:49:50</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
