--- a/Vimwiki.html
+++ b/Vimwiki.html
@@ -118,10 +118,11 @@ let tlist_vimwiki_settings = 'wiki;h:Headers'
 <h2 id="toc_1.2">资源</h2>
 <ul>
 <li>
-<a href="http://code.google.com/p/vimwiki/">vimwiki - Google code</a>
+<a href="http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx">中文文档</a>
 </li>
 <li>
-<a href="http://www.vim.org/scripts/script.php?script_id=2226">vimwiki:Personal Wiki for Vim</a>
+<a href="http://code.google.com/p/vimwiki/">vimwiki @google.code</a>
+    <a href="http://www.vim.org/scripts/script.php?script_id=2226">@vim.org</a>
 </li>
 <li>
 <a href="http://habamax.ru/blog/">作者博客</a>
@@ -198,7 +199,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月10日 13:52:04</p>
+    <p>本页最后修订于 2010年12月30日 15:01:44</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
