--- a/Web-Design.html
+++ b/Web-Design.html
@@ -60,6 +60,9 @@
 <li>
 <a href="http://www.google.com/support/webmasters/bin/answer.py?hl=cn&amp;answer=40132">HTTP 状态代码</a>
 </li>
+<li>
+<a href="http://ued.koubei.com/?p=1217">三谈Iframe自适应高度</a> <a href="http://ued.koubei.com/?p=243">再谈iframe自适应高度</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">分页</h2>
@@ -183,6 +186,29 @@ window.location = "view-source:" + window.location.href;
 </li>
 </ul>
 
+
+<h2 id="toc_1.9">开发流程</h2>
+<ol>
+<li>
+需求分析
+</li>
+<li>
+草图设计
+</li>
+<li>
+前后端协商每个页面本身的路径/名称，需要的变量及其名称，URL 传参名称等规格。
+</li>
+<li>
+前后端分别开发设计。
+</li>
+<li>
+前后端整合
+</li>
+<li>
+测试
+</li>
+</ol>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -201,7 +227,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月26日 12:28:24</p>
+    <p>本页最后修订于 2011年01月07日 22:00:15</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
