--- a/data-visualization.html
+++ b/data-visualization.html
@@ -104,6 +104,9 @@
 <li>
 <a href="http://www.digitalsurgeons.com/facebook-vs-twitter-infographic/">Facebook vs. Twitter</a>
 </li>
+<li>
+<a href="http://haveamint.com/">Mint</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">常见图形</h2>
@@ -330,7 +333,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月23日 16:07:13</p>
+    <p>本页最后修订于 2011年01月01日 13:14:41</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
