--- a/icons.html
+++ b/icons.html
@@ -25,7 +25,7 @@
 </header>
 <article>
 
-<h1 id="toc_1">Icons</h1>
+<h1 id="toc_1">图片(Pics)&amp;图标(Icons)</h1>
 <ul>
 <li>
 <a href="http://findicons.com">FindIcons</a> - 图标搜索引擎
@@ -56,6 +56,9 @@
 </li>
 <li>
 <a href="http://people.freedesktop.org/~jimmac/icons/">Gnome Icon Theme</a>
+</li>
+<li>
+<a href="http://www.dutchicon.com/">dutch icon™</a>
 </li>
 </ul>
 
@@ -99,6 +102,16 @@
 \HKEY_CLASSES_ROOT\htmlfile\DefaultIcon
 </p>
 
+<h2 id="toc_1.3">照片</h2>
+<p>
+5 寸照片：12.7 * 8.7cm<br />
+6 寸照片：15.2 * 10.5cm
+</p>
+
+<p>
+冲洗时按照这个比例（可以使用 Google <a href="Picasa.html">Picasa</a>）裁切好再发给冲洗店，不要让他们裁切了。
+</p>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -117,7 +130,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月23日 16:45:47</p>
+    <p>本页最后修订于 2011年01月13日 13:50:02</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
