--- a/music.html
+++ b/music.html
@@ -66,6 +66,7 @@
 <li>
 <a href="http://zh.wikipedia.org/zh-cn/Beyond">Beyond</a>
     <a href="http://www.beyondmusic.net/">beyondmusic</a>
+    <a href="http://www.lovebeyond.com/">永远的 BEYOND</a>
 </li>
 <li>
 <a href="http://music.sina.com.cn/yueku/s/3141.html">喜多郎(Kitora)</a>
@@ -152,6 +153,9 @@ Howard Shore - Concerning Hobbits
 Jeff Oster - Big Sur
 </li>
 <li>
+Klaus Schonning - The Pedestrian Street
+</li>
+<li>
 Loreena McKennitt - Huron 'Beltane' Fire Dance
 </li>
 <li>
@@ -165,6 +169,9 @@ Philippe Alexandre Belisle - Horizon
 </li>
 <li>
 R Arduini - Whispering Winds
+</li>
+<li>
+Super8 Tab Feat. Jan Burton - Free Love (Original Mix)
 </li>
 <li>
 Vangelis - Alpha
@@ -195,7 +202,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月29日 16:20:23</p>
+    <p>本页最后修订于 2011年01月12日 14:43:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
