--- a/Books.html
+++ b/Books.html
@@ -58,9 +58,28 @@
 <li>
 <a href="http://poems.tang.net/">全唐诗</a>
 </li>
+<li>
+<a href="http://bbs.mydoo.cn/index.php">电子书论坛</a>
+</li>
 </ul>
 
-<h2 id="toc_1.1">Open Source</h2>
+<h2 id="toc_1.1">图书馆</h2>
+<ul>
+<li>
+<a href="http://www.hzlib.net/">杭州图书馆</a> <a href="http://www.hangtu.com/">2</a> - 文澜在线数字图书馆，文化共享工程杭州支中心。
+    杭州图书馆对所有读者免费开放，也有乞丐和拾荒者进门阅览。
+    有读者找到褚树青馆长投诉，说允许乞丐和拾荒者进图书馆，是对其他读者的不尊重。
+    褚树青回答说：我无权拒绝他们入内读书，但您有权选择离开。
+</li>
+<li>
+<a href="http://www.zjlib.net.cn/">浙江图书馆</a>
+</li>
+<li>
+<a href="http://www.lib.zjut.edu.cn/">浙江工业大学图书馆</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Open Source</h2>
 <ul>
 <li>
 <a href="http://theopensourceway.org/">The Open Source Way: Creating and nuturing communities of contributors</a>
@@ -70,7 +89,7 @@
 </li>
 </ul>
 
-<h2 id="toc_1.2">《黑客》(Hacker Monthly)</h2>
+<h2 id="toc_1.3">《黑客》(Hacker Monthly)</h2>
 <ul>
 <li>
 <a href="http://hackermonthly.com/">Hacker Monthly</a>
@@ -89,14 +108,25 @@
 </li>
 </ul>
 
-<h2 id="toc_1.3">Tools</h2>
+<h2 id="toc_1.4">Tools</h2>
 <ul>
 <li>
 <a href="http://calibre-ebook.com/">calibre</a> - E-book management.
 </li>
+<li>
+PDF
+</li>
+<ul>
+<li>
+<a href="http://xbeta.info/pdf-software.htm">全面接触PDF:最好用的PDF软件汇总</a>
+</li>
+<li>
+<a href="http://xbeta.info/pdf-tools.htm">最佳免费PDF工具软件</a>
+</li>
+</ul>
 </ul>
 
-<h2 id="toc_1.4">延伸阅读</h2>
+<h2 id="toc_1.5">延伸阅读</h2>
 <ol>
 <li>
 <a href="Amazon-Kindle.html">Amazon-Kindle</a>
@@ -121,7 +151,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月13日 00:26:12</p>
+    <p>本页最后修订于 2011年01月19日 21:22:28</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
