--- a/OS.html
+++ b/OS.html
@@ -39,6 +39,9 @@
 <li>
 <a href="http://www.linux.fm/">linux.fm</a>
 </li>
+<li>
+<a href="http://www.freebsd.org/">FreeBSD</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Windows</h2>
@@ -49,9 +52,21 @@
 </ul>
 
 <p>
-Windows 7 的用户账户控制(UAC)<br />
+<strong>Windows 7 的用户账户控制(UAC)</strong><br />
 控制面板 -&gt; 用户账户和家庭安全 -&gt; 用户账户 -&gt; 更改用户账户控制设置
 </p>
+
+<p>
+<strong>让资源管理器默认使用列表(详细信息)视图</strong>
+</p>
+<ol>
+<li>
+菜单：显示 -&gt; 详细信息
+</li>
+<li>
+菜单：工具 -&gt; 文件夹选项 -&gt; 查看 -&gt; 应用到所有文件夹。
+</li>
+</ol>
 
 <p>
 <a href="http://support.microsoft.com/kb/310516/zh-cn">如何通过使用注册项 (.reg) 文件添加、修改或删除注册表子项和值</a>
@@ -257,31 +272,27 @@ gpedit.msc-----组策略
 <li>
 <a href="http://www.ibm.com/developerworks/cn/linux/l-tip-prompt/l-pex/">如何远程安装Linux</a>
 </li>
+<li>
+<a href="http://www.gnome.org/">GNOME</a>
+</li>
+<li>
+<a href="http://www.kde.org/">KDE - Experience Freedom!</a>
+</li>
+<li>
+<a href="http://ikde.org/">I, KDE</a> - 关注 KDE 软件集。
+</li>
+<li>
+<a href="http://i.linuxtoy.org/docs/guide/">开源世界旅行手册</a>
+</li>
+<li>
+<a href="http://awesome.naquadah.org/">awesome window manager</a>
+</li>
 </ul>
 
 <h2 id="toc_1.6">Ubuntu</h2>
 <ul>
 <li>
-<a href="http://www.ubuntu.com/">Ubuntu Home Page</a>
-</li>
-<li>
-<a href="http://www.ubuntuhome.com">Ubuntu Home</a>
-</li>
-<li>
-<a href="http://www.ubuntu.org.cn/">Ubuntu 中文主页</a> ^<a href="http://wiki.ubuntu.org.cn">wiki</a>, <a href="http://forum.ubuntu.org.cn/">Forum</a>, <a href="http://linux.ubuntu.org.cn/">Linux 导航</a>^
-</li>
-<li>
-<a href="http://www.ubuntuchina.com/">Ubuntu 中国社区</a>
-</li>
-<li>
-<a href="http://people.ubuntu.com/~happyaron/udc-cn/index.html">Ubuntu 桌面培训</a>
-</li>
-<li>
-<a href="http://ubuntuabc.com/123/">UbuntuABC</a> - Ubuntu, 就这么简单。
-</li>
-<li>
-<a href="http://wubi-installer.org/">Windows Ubuntu Installer</a>
-    <a href="http://wubi.sourceforge.net/">wubi.sf.net</a>
+<a href="Ubuntu.html">Ubuntu</a>
 </li>
 <li>
 <a href="http://www.gnome.org/">GNOME: The Free Software Desktop Project</a>
@@ -319,7 +330,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月03日 18:49:04</p>
+    <p>本页最后修订于 2011年02月25日 20:54:41</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
