--- a/Photoshop.html
+++ b/Photoshop.html
@@ -56,6 +56,83 @@
 </li>
 </ul>
 
+<h2 id="toc_1.3">序列号</h2>
+<p>
+hosts
+</p>
+<pre>
+127.0.0.1 activate.adobe.com
+127.0.0.1 practivate.adobe.com
+127.0.0.1 ereg.adobe.com
+127.0.0.1 activate.wip3.adobe.com
+127.0.0.1 wip3.adobe.com
+127.0.0.1 3dns-3.adobe.com
+127.0.0.1 3dns-2.adobe.com
+127.0.0.1 adobe-dns.adobe.com
+127.0.0.1 adobe-dns-2.adobe.com
+127.0.0.1 adobe-dns-3.adobe.com
+127.0.0.1 ereg.wip3.adobe.com
+127.0.0.1 activate-sea.adobe.com
+127.0.0.1 wwis-dubc1-vip60.adobe.com
+127.0.0.1 activate-sjc0.adobe.com
+</pre>
+<pre>
+1330-1037-6329-2943-7875-4955
+</pre>
+
+<p>
+CS5
+</p>
+<pre>
+1330-1927-7762-6383-0202-0414
+
+用户名:www.budingwang.com
+序列号:1330-1440-1602-3671-9749-7897
+
+用户名:www.budingwang.com
+序列号:1330-1191-2998-6712-2520-5424
+
+用户名:www.budingwang.com
+序列号:1330-1367-4285-4928-0630-3107
+
+用户名:www.budingwang.com
+序列号:1330-1570-9599-9499-8092-8237
+
+用户名:www.budingwang.com
+序列号:1330-1028-1662-3206-1688-5114
+
+用户名:www.budingwang.com
+序列号:1330-1631-5733-5042-4138-6389
+
+用户名:www.budingwang.com
+序列号:1330-1660-8832-8584-6344-6634
+
+用户名:www.budingwang.com
+序列号:1330-1882-6069-0443-2294-0578
+
+用户名:www.budingwang.com
+序列号:1330-1364-5568-2448-8404-6542
+
+用户名:www.budingwang.com
+序列号:1330-1382-2892-4861-3970-3861
+
+用户名:www.budingwang.com
+序列号:1330-1633-1902-3946-2167-7786
+
+用户名:www.budingwang.com
+序列号:1330-1296-1467-6982-2185-9936
+
+用户名:www.budingwang.com
+序列号:1330-1962-9956-7065-5178-1710
+
+用户名:www.budingwang.com
+序列号:1330-1838-6855-4610-1857-5925
+
+用户名:www.budingwang.com
+序列号:1330-1421-4183-5405-2137-1627
+
+</pre>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -74,7 +151,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年04月22日 20:12:38</p>
+    <p>本页最后修订于 2011年04月07日 10:46:34</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
