--- a/Textile.html
+++ b/Textile.html
@@ -31,13 +31,13 @@
 <a href="http://textile.thresholdstate.com/">Textile</a>
 </li>
 <li>
-<a href="http://www.textism.com/tools/textile/">Textism</a>
+<a href="http://redcloth.org/hobix.com/textile/">A Textile Reference</a>
+</li>
+<li>
+<a href="http://www.squarespace.com/display/ShowHelp?section=Textile">Textile Syntax Reference</a>
 </li>
 <li>
 <a href="http://redcloth.org/textile">Textile Reference Manual for RedCloth 4</a>
-</li>
-<li>
-<a href="http://redcloth.org/hobix.com/textile/">A Textile Reference</a>
 </li>
 <li>
 <a href="http://en.wikipedia.org/wiki/Textile_%28markup_language%29">Textile (markup language)</a>
@@ -47,6 +47,9 @@
 <h2 id="toc_1.1">Tools</h2>
 <ul>
 <li>
+<a href="http://www.textism.com/tools/textile/">Textism</a>
+</li>
+<li>
 <a href="http://www.vim.org/scripts/script.php?script_id=2305">Textile for VIM(Syntax)</a>
     <a href="http://github.com/timcharper/textile.vim">@github</a>
 </li>
@@ -54,7 +57,22 @@
 <a href="http://www.vim.org/scripts/script.php?script_id=3344">preview : Plugin for previewing markup files(markdown,rdoc,textile,html)</a>
     <a href="https://github.com/greyblake/vim-preview">vim-preview@github</a>
 </li>
+<li>
+<a href="http://jekyllrb.com/">jekyllrb.com</a> - Need ruby.
+    <a href="https://github.com/mojombo/jekyll/">jekyll@github</a>
+    <a href="https://github.com/tekkub/tekkub.github.com">tekkub.net</a>
+</li>
 </ul>
+
+<h2 id="toc_1.2">See Also</h2>
+<ol>
+<li>
+<a href="Git.html">Git</a>
+</li>
+<li>
+<a href="Textile.html">Textile</a>
+</li>
+</ol>
 
 <script type="text/javascript">
 function onSearch(){
@@ -74,7 +92,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月10日 10:15:49</p>
+    <p>本页最后修订于 2011年01月24日 00:42:25</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
