--- a/edu.html
+++ b/edu.html
@@ -75,6 +75,9 @@ Ocwconsortium.org ——搜罗了全世界250所大学的13,000网络课程。(f
 <li>
 <a href="http://bb.news.qq.com/open.htm">腾讯.淘课</a>
 </li>
+<li>
+<a href="http://tv.sohu.com/open/">搜狐名校公开课</a>
+</li>
 </ul>
 
 <p>
@@ -107,7 +110,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月04日 19:35:23</p>
+    <p>本页最后修订于 2011年01月20日 23:05:24</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
