--- a/video.html
+++ b/video.html
@@ -86,6 +86,9 @@
 <li>
 <a href="http://www.youku.com/show_page/id_zac398d46a47011df97c0.html">11度青春系列电影</a>
 </li>
+<li>
+<a href="http://72.232.254.235/show.php?f=1&amp;t=1136535&amp;m=8336756">物体跟踪的算法</a> - Zdenek Kalal
+</li>
 </ul>
 
 
@@ -128,7 +131,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月12日 00:05:26</p>
+    <p>本页最后修订于 2011年04月15日 23:35:01</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
