--- a/BI.html
+++ b/BI.html
@@ -45,6 +45,9 @@
 <li>
 <a href="http://www.chinabyte.com/keyword/%E5%95%86%E4%B8%9A%E6%99%BA%E8%83%BD/">http://www.chinabyte.com/keyword/%E5%95%86%E4%B8%9A%E6%99%BA%E8%83%BD/</a>
 </li>
+<li>
+<a href="http://www.cnblogs.com/lijun4017/">专注于中国的商业智能</a>
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -65,7 +68,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年05月12日 10:47:11</p>
+    <p>本页最后修订于 2011年02月11日 15:05:14</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
