--- a/Balsamiq-Mockups.html
+++ b/Balsamiq-Mockups.html
@@ -38,7 +38,7 @@
 <h2 id="toc_1.1">Tips</h2>
 <p>
 中文输入<br />
-默认情况下不支持中文输入，需要选中 View -&gt; Use System Fonts
+Windows 下默认情况下不支持中文输入，需要选中 View -&gt; Use System Fonts
 </p>
 
 <p>
@@ -77,7 +77,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年08月26日 11:13:17</p>
+    <p>本页最后修订于 2011年03月11日 11:15:40</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
