--- a/CSS.html
+++ b/CSS.html
@@ -32,16 +32,17 @@
 <ul>
 <li><a href="#toc_1.1">Calendar stamp</a></li>
 <li><a href="#toc_1.2">CSS Button</a></li>
-<li><a href="#toc_1.3">CSS 圆角</a></li>
-<li><a href="#toc_1.4">CSS Table</a></li>
-<li><a href="#toc_1.5">CSS 反轉</a></li>
-<li><a href="#toc_1.6">字体 (Fonts)</a></li>
-<li><a href="#toc_1.7">工具 (Tools)</a></li>
-<li><a href="#toc_1.8">清除浮动(clearfix)</a></li>
-<li><a href="#toc_1.9">网格(Grid System)</a></li>
-<li><a href="#toc_1.10">CSS Hacks</a></li>
-<li><a href="#toc_1.11">活动</a></li>
-<li><a href="#toc_1.12">PPT</a></li>
+<li><a href="#toc_1.3">Checkbox &amp; Radio</a></li>
+<li><a href="#toc_1.4">CSS 圆角</a></li>
+<li><a href="#toc_1.5">CSS Table</a></li>
+<li><a href="#toc_1.6">CSS 反轉</a></li>
+<li><a href="#toc_1.7">字体 (Fonts)</a></li>
+<li><a href="#toc_1.8">工具 (Tools)</a></li>
+<li><a href="#toc_1.9">清除浮动(clearfix)</a></li>
+<li><a href="#toc_1.10">网格(Grid System)</a></li>
+<li><a href="#toc_1.11">CSS Hacks</a></li>
+<li><a href="#toc_1.12">活动</a></li>
+<li><a href="#toc_1.13">PPT</a></li>
 </ul>
 </ul>
 </div>
@@ -91,6 +92,15 @@
 <li>
 <a href="http://www.css-101.org/">CSS 101</a>
 </li>
+<li>
+<a href="http://www.csszengarden.com/">css Zen Garden</a>
+    <a href="http://www.csszengarden.com/tr/chinese/">CSS 设计之美(CSS 禅意花园)</a>
+    <a href="http://yekai.net/?p=85">《CSS禅意花园》studyNote</a>
+</li>
+<li>
+<a href="http://css-tricks.com/examples/ShapesOfCSS/">The Shapes of CSS</a>
+    <a href="http://css-tricks.com/show-and-edit-style-element/">Show and Edit Style Element</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Calendar stamp</h2>
@@ -116,7 +126,17 @@
 </li>
 </ul>
 
-<h2 id="toc_1.3">CSS 圆角</h2>
+<h2 id="toc_1.3">Checkbox &amp; Radio</h2>
+<ul>
+<li>
+<a href="http://www.zhangxinxu.com/wordpress/?p=56">复选框单选框与文字对齐问题的研究与解决</a>
+</li>
+<li>
+<a href="http://hi.baidu.com/chapsticks/blog/item/a5cc123c3fb96afe3d6d9712.html">表单 提示文字 对齐 (input,checkbox文字对齐）垂直对齐</a>
+</li>
+</ul>
+
+<h2 id="toc_1.4">CSS 圆角</h2>
 <ul>
 <li>
 <a href="http://border-radius.com/">CSS 圆角</a>
@@ -129,7 +149,7 @@
 </li>
 </ul>
 
-<h2 id="toc_1.4">CSS Table</h2>
+<h2 id="toc_1.5">CSS Table</h2>
 <ul>
 <li>
 <a href="http://veerle.duoh.com/blog/comments/a_css_styled_table/alt_rows.js">A CSS styled table</a> ^<a href="http://www.duoh.com/csstutorials/csstables/">Demo</a>^
@@ -139,14 +159,14 @@
 </li>
 </ul>
 
-<h2 id="toc_1.5">CSS 反轉</h2>
+<h2 id="toc_1.6">CSS 反轉</h2>
 <ul>
 <li>
 <a href="http://snook.ca/archives/html_and_css/css-text-rotation">Text Rotation with CSS</a> - 使用 CSS 旋轉實現的日期樣式。
 </li>
 </ul>
 
-<h2 id="toc_1.6">字体 (Fonts)</h2>
+<h2 id="toc_1.7">字体 (Fonts)</h2>
 <ul>
 <li>
 <a href="http://www.sun.com/bigadmin/hubs/multilingual/simp_chinese/content/font_1.jsp">谈谈字体那些事（第一部分）</a>
@@ -171,7 +191,7 @@
 </li>
 </ul>
 
-<h2 id="toc_1.7">工具 (Tools)</h2>
+<h2 id="toc_1.8">工具 (Tools)</h2>
 <ul>
 <li>
 <a href="http://csstidy.sourceforge.net/index.php">CSSTidy</a>^<a href="http://hotoo.googlecode.com/svn/trunk/tools/csstidy/index.html">cn</a>^
@@ -210,14 +230,14 @@ Online (<a href="http://www.css88.com/tool/csstidy/">1</a>,<a href="http://www.l
 </li>
 </ul>
 
-<h2 id="toc_1.8">清除浮动(clearfix)</h2>
+<h2 id="toc_1.9">清除浮动(clearfix)</h2>
 <ul>
 <li>
 <a href="http://www.qianduan.net/universal-to-remove-floating-style.html">万能清除浮动样式</a>
 </li>
 </ul>
 
-<h2 id="toc_1.9">网格(Grid System)</h2>
+<h2 id="toc_1.10">网格(Grid System)</h2>
 <ul>
 <li>
 <a href="http://1kbgrid.com/">The 1Kb CSS Grid</a> - 拖放各个阈值并直接下载自动生成的CSS。
@@ -272,7 +292,7 @@ Online (<a href="http://www.css88.com/tool/csstidy/">1</a>,<a href="http://www.l
 </li>
 </ul>
 
-<h2 id="toc_1.10">CSS Hacks</h2>
+<h2 id="toc_1.11">CSS Hacks</h2>
 <ul>
 <li>
 <a href="CSS-Hacks.html">CSS-Hacks</a>
@@ -288,14 +308,14 @@ Online (<a href="http://www.css88.com/tool/csstidy/">1</a>,<a href="http://www.l
 </li>
 </ul>
 
-<h2 id="toc_1.11">活动</h2>
+<h2 id="toc_1.12">活动</h2>
 <ul>
 <li>
 <a href="http://naked.dustindiaz.com/">CSS Naked Day</a>
 </li>
 </ul>
 
-<h2 id="toc_1.12">PPT</h2>
+<h2 id="toc_1.13">PPT</h2>
 <ul>
 <li>
 <a href="http://www.slideshare.net/stubbornella/css-wish-list">CSS Wish List @JSConf</a> - CSS继承、变量等愿望。
@@ -320,7 +340,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月12日 10:30:36</p>
+    <p>本页最后修订于 2011年03月24日 22:55:55</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
