--- a/Compiler.html
+++ b/Compiler.html
@@ -45,6 +45,17 @@
 <li>
 <a href="http://hi.baidu.com/yanghaoji/blog/item/55eca72f7829d0391f3089d3.html/cmtid/dd504031f820d417eac4af7c">C语言的lex词法分析和yacc语法分析</a>
 </li>
+<li>
+<a href="http://haxe.org/">haXe</a> - 支持多种语言平台。
+</li>
+<ul>
+<li>
+<a href="http://vim.sourceforge.net/scripts/script.php?script_id=3143">vim-haxe</a>
+</li>
+<li>
+<a href="http://www.awflasher.com/blog/archives/554">haXe + ScreenWeaver = SWHX</a>
+</li>
+</ul>
 </ul>
 
 <h2 id="toc_1.1">Books</h2>
@@ -93,7 +104,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月15日 22:03:14</p>
+    <p>本页最后修订于 2011年02月26日 13:47:52</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
