--- a/Data-Mining.html
+++ b/Data-Mining.html
@@ -28,6 +28,13 @@
 <h1 id="toc_1">数据挖掘</h1>
 <ul>
 <li>
+<a href="http://en.wikipedia.org/wiki/Data_mining">@wikipedia</a>
+    <a href="http://zh.wikipedia.org/zh/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98">中文</a>
+</li>
+<li>
+<a href="http://baike.baidu.com/view/7893.htm">@百度百科</a>
+</li>
+<li>
 <a href="http://chem-eng.utoronto.ca/~datamining/dmc/data_mining_map.htm">An Introduction to Data Mining</a>
 </li>
 </ul>
@@ -50,7 +57,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月12日 17:04:20</p>
+    <p>本页最后修订于 2011年01月14日 17:31:30</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
