--- a/Emacs.html
+++ b/Emacs.html
@@ -42,6 +42,9 @@
 <li>
 <a href="http://www2.lib.uchicago.edu/keith/tcl-course/emacs-tutorial.html">A Tutorial Introduction to GNU Emacs</a>
 </li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/linux/l-cn-emacs-shell/index.html?ca=drs-">当 Shell 遇见 Emacs -- 大话 Emacs Shell Mode</a>
+</li>
 </ul>
 
 <p>
@@ -93,7 +96,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月13日 13:36:35</p>
+    <p>本页最后修订于 2011年01月21日 21:57:13</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
