--- a/Flex.html
+++ b/Flex.html
@@ -69,6 +69,9 @@
 <li>
 <a href="http://riaoo.com/?page_id=75">电子书及实用工具下载</a>
 </li>
+<li>
+<a href="http://cflex.net/">CFLEX: Community Flex</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Tutorial</h2>
@@ -261,7 +264,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月05日 23:48:50</p>
+    <p>本页最后修订于 2011年03月01日 14:04:40</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
