--- a/Games.html
+++ b/Games.html
@@ -32,6 +32,38 @@
 </li>
 </ul>
 
+<h2 id="toc_1.1">魔方(Cube)</h2>
+<ul>
+<li>
+<a href="http://www.rubik.com.cn/">魔方小站</a>
+</li>
+<li>
+<a href="http://www.66he99.com/">魔方也流行</a>
+    <a href="http://www.66he99.com/guojia.html">国甲魔方介绍</a>
+</li>
+<li>
+<a href="http://www.mf100.org/">魔方乐园</a>
+</li>
+<li>
+<a href="http://bbs.mf8.com.cn/">魔方吧 - 中国魔方俱乐部</a>
+</li>
+<li>
+<a href="http://wangsk789.blog.163.com/">wangsk789.blog@163</a>
+    <a href="http://hi.baidu.com/wangsk">wangsk789@baidu</a>
+</li>
+<li>
+<a href="http://wyl7830.blog.163.com/blog/#m=0&amp;t=1&amp;c=fks_080064087087087074086085074071093094082065084083080">#智力玩具</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Video</h2>
+<ul>
+<li>
+<a href="http://v.youku.com/v_show/id_XMjI2ODU2NTgw.html">The road to 6.77 - Feliks Zemdegs</a>
+    <a href="http://v.youku.com/v_show/id_XMjI4ODg2NDg4.html">Feliks 7.03和6.77 视频的6分之1倍速慢放</a>
+</li>
+</ul>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -50,7 +82,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月17日 23:35:50</p>
+    <p>本页最后修订于 2011年01月23日 20:47:04</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
