--- a/Google.html
+++ b/Google.html
@@ -54,6 +54,15 @@
 <li>
 <a href="http://www.google.com/transliterate/">Google Transliterate</a>
 </li>
+<li>
+<a href="http://www.google.cn/landing/chunyun/">谷歌春运地图</a>
+</li>
+<li>
+<a href="http://gdfans.net/">谷得范 | 谷歌开发爱好者</a>
+</li>
+<li>
+<a href="http://www.google.com/transliterate?text=zhongwen">Google 云输入法</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">APIs</h2>
@@ -122,6 +131,13 @@
 </li>
 </ul>
 
+<h2 id="toc_1.3">See Also</h2>
+<ul>
+<li>
+<a href="Google-Chrome.html">Google-Chrome</a>
+</li>
+</ul>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -140,7 +156,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月11日 09:04:58</p>
+    <p>本页最后修订于 2011年03月14日 23:47:18</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
