--- a/HTML.html
+++ b/HTML.html
@@ -117,6 +117,12 @@
 </li>
 </ul>
 
+<h2 id="toc_1.5">checkbox</h2>
+<p>
+<span class="todo">TODO:</span> onchange 在 IE8 下需要 blur 才触发，如果连续点击 checkbox，checked 状态会滞后。
+可以换成使用 <code>onclick</code> 或者 <code>onpropertychange</code> 事件。
+</p>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -135,7 +141,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月04日 14:08:22</p>
+    <p>本页最后修订于 2011年03月26日 21:20:02</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
