--- a/Links.html
+++ b/Links.html
@@ -200,6 +200,33 @@
 <li>
 <a href="http://www.songwa.org/">王松</a>
 </li>
+<li>
+<a href="http://www.zhouqicf.com/">ZhouQiCF.com</a>
+</li>
+<li>
+<a href="http://yan-yan.info/">Coder in Thinking</a>
+</li>
+<li>
+<a href="http://adamlu.com/">Adam</a>
+</li>
+<li>
+<a href="http://leezhong.com/">李忠</a> - by jeklly
+</li>
+<li>
+<a href="http://www.mikkolee.com/">小麦的自习室</a>
+</li>
+<li>
+<a href="http://www.life-args.cn/">Shawn</a>
+</li>
+<li>
+<a href="http://dovapour.info/">杜伟坡</a>
+</li>
+<li>
+<a href="http://blog.guoyu.me/">郭宇</a>
+</li>
+<li>
+<a href="http://www.life-args.cn/">life-args</a>
+</li>
 </ul>
 
 <h2 id="toc_1.4">Softwares</h2>
@@ -257,6 +284,12 @@
 <li>
 <a href="http://www.baibanbao.net/">白板报</a>
 </li>
+<li>
+<a href="http://www.aqee.net/">外刊IT评论</a>
+</li>
+<li>
+<a href="http://www.dbanotes.net/">DBA Notes</a> - 大 Feng
+</li>
 </ul>
 
 <h2 id="toc_1.7">Books</h2>
@@ -284,7 +317,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月11日 10:25:34</p>
+    <p>本页最后修订于 2011年04月15日 23:29:17</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
