--- a/Python.html
+++ b/Python.html
@@ -59,12 +59,42 @@
 <li>
 <a href="http://pypy.org/">PyPy</a>
 </li>
+<li>
+<a href="http://ipython.scipy.org/moin/">ipython</a>
+    <a href="https://github.com/ipython">@github</a>
+    <a href="http://ipython.github.com/ipython-doc/">docs</a>
+</li>
+<li>
+<a href="http://bpython-interpreter.org/">bpython</a>
+</li>
 </ul>
 
 <h2 id="toc_1.2">Books</h2>
 <ul>
 <li>
+<a href="http://guide.python-distribute.org/">The Hitchhiker’s Guide to Packaging</a>
+</li>
+<li>
+<a href="http://diveintopython3.org/">Dive Into Python 3</a>
+    <a href="http://diveintopython3.com/">深入 Python 3</a>
+</li>
+<li>
 <a href="http://code.google.com/p/openbookproject/">Open Book Proj. 4 Chinese Pythonic 中文开放技术图书中心！</a>
+</li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/linux/theme/special/index.html#python">Python 编程系列</a>
+</li>
+<li>
+<a href="http://i.linuxtoy.org/docs/dip/">深入 Python :Dive Into Python 中文版</a>
+</li>
+<li>
+<a href="http://www.swaroopch.com/notes/Python">Python Notes</a>
+</li>
+<li>
+<a href="http://i.linuxtoy.org/docs/bop/">简明 Python 教程</a>
+</li>
+<li>
+<a href="http://linuxtoy.org/archives/9-free-python-books.html">9 本免费的 Python 语言编程书籍</a>
 </li>
 </ul>
 
@@ -75,6 +105,9 @@
     <a href="http://www.vim.org/scripts/script.php?script_id=2441">Pyflakes-vim</a>,
     <a href="http://github.com/kevinw/pyflakes-vim">src</a>,
     <a href="http://pychecker.sourceforge.net/">Pychecker</a>,
+</li>
+<li>
+<a href="http://code.google.com/p/vimpdb/">vimpdb</a> - Integrated Python debugging within Vim.
 </li>
 <li>
 <a href="http://www.logilab.org/project/pylint">PyLint</a>
@@ -105,7 +138,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月23日 10:16:52</p>
+    <p>本页最后修订于 2011年04月02日 21:48:19</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
