--- a/Web-Design.html
+++ b/Web-Design.html
@@ -63,6 +63,9 @@
 <li>
 <a href="http://ued.koubei.com/?p=1217">三谈Iframe自适应高度</a> <a href="http://ued.koubei.com/?p=243">再谈iframe自适应高度</a>
 </li>
+<li>
+<a href="http://code.google.com/p/doctype/">Documenting the open web</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">分页</h2>
@@ -128,6 +131,16 @@
 <li>
 <a href="http://www.getmarkman.com/">MarkMan</a> - 自动在图片上做长度和间距标记的 AIR 工具，给设计师。
 </li>
+<li>
+<a href="http://www.zhouqicf.com/code-cola">Code Cola</a>
+    <a href="http://code.google.com/p/visual-firebug/">visual-firebug@google.code</a>
+</li>
+<li>
+<a href="http://wiki.ued.taobao.net/doku.php?id=group:f2e:tools">compatibility_detector.crx</a> - 兼容性检测 - for Google Chrome.
+</li>
+<li>
+<a href="http://www.webpagetest.org/">Test a website's performance</a>
+</li>
 </ul>
 
 <h2 id="toc_1.6">CDN</h2>
@@ -156,7 +169,7 @@ Microsoft CDN
 </li>
 </ul>
 
-<h2 id="toc_1.7">Tips</h2>
+<h2 id="toc_1.7">Notes</h2>
 <pre>
 &lt;input type="text" name="textfield" oncopy="return false"&gt;
 &lt;input type="text" name="textfield" oncut="return false"&gt;
@@ -227,7 +240,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月07日 22:00:15</p>
+    <p>本页最后修订于 2011年02月21日 00:09:17</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
