--- a/data-visualization.html
+++ b/data-visualization.html
@@ -105,6 +105,9 @@
 <a href="http://www.digitalsurgeons.com/facebook-vs-twitter-infographic/">Facebook vs. Twitter</a>
 </li>
 <li>
+<a href="http://www.y513.com/201009531.html">趣味数据大盘点之 Twitter 篇</a>
+</li>
+<li>
 <a href="http://haveamint.com/">Mint</a>
 </li>
 </ul>
@@ -245,6 +248,11 @@ K 线图(Candlestick Chart)
 <li>
 <a href="http://www.amcharts.com/">amCharts: flash charts, stock charting software</a>
 </li>
+<ul>
+<li>
+<a href="amcharts-notes.html">amCharts 笔记</a>
+</li>
+</ul>
 <li>
 <a href="http://www.fusioncharts.com/">Fusion Charts</a>
 </li>
@@ -333,7 +341,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月01日 13:14:41</p>
+    <p>本页最后修订于 2011年03月05日 08:50:45</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
