--- a/database.html
+++ b/database.html
@@ -120,7 +120,14 @@ dolMwNmCOHcBqhubCA7hnM3tZGDFCGFN
 </li>
 </ul>
 
-<h2 id="toc_1.4">PL SQL最佳入门教程</h2>
+<h2 id="toc_1.4">PostgreSQL</h2>
+<ul>
+<li>
+<a href="http://www.pgsqldb.org/">PostgreSQL 中文社区</a>
+</li>
+</ul>
+
+<h2 id="toc_1.5">PL SQL最佳入门教程</h2>
 <ul>
 <li>
 PL SQL入门教程之intr1-1 <a href="http://you.video.sina.com.cn/pg/topicdetail/topicPlay.php?tid=3677071&amp;uid=1320045357&amp;t=1#26873955">http://you.video.sina.com.cn/pg/topicdetail/topicPlay.php?tid=3677071&amp;uid=1320045357&amp;t=1#26873955</a>
@@ -196,7 +203,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月21日 23:28:43</p>
+    <p>本页最后修订于 2011年01月14日 21:21:32</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
