--- a/diff-patch.html
+++ b/diff-patch.html
@@ -68,6 +68,9 @@
 <li>
 <a href="http://gnuwin32.sourceforge.net/packages/diffutils.htm">DiffUtils for Windows</a>
 </li>
+<li>
+<a href="http://colordiff.sourceforge.net/">ColorDiff</a>
+</li>
 </ul>
 
 <h2 id="toc_1.2">Notes</h2>
@@ -137,7 +140,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年01月01日 23:24:19</p>
+    <p>本页最后修订于 2011年03月02日 15:34:19</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
