--- a/fonts.html
+++ b/fonts.html
@@ -53,7 +53,14 @@
 </li>
 </ul>
 
-<h2 id="toc_1.1">Project</h2>
+<h2 id="toc_1.1">Fonts</h2>
+<ul>
+<li>
+<a href="http://www.dafont.com/ice-age-font.font">ICE AGE font</a> - 清晰可辨，可爱的卡通字体。
+</li>
+</ul>
+
+<h2 id="toc_1.2">Project</h2>
 <ul>
 <li>
 <a href="http://code.google.com/webfonts">Google Font Directory</a>
@@ -68,7 +75,7 @@
 </li>
 </ul>
 
-<h2 id="toc_1.2">文本图片</h2>
+<h2 id="toc_1.3">文本图片</h2>
 <ul>
 <li>
 <a href="http://www.network-science.de/ascii/">ASCII Generator</a>
@@ -96,7 +103,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年07月20日 15:08:52</p>
+    <p>本页最后修订于 2011年02月18日 09:22:51</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
