--- a/jQuery.html
+++ b/jQuery.html
@@ -36,6 +36,7 @@
 <li><a href="#toc_1.3">Video</a></li>
 <li><a href="#toc_1.4">Plugins</a></li>
 <li><a href="#toc_1.5">UI</a></li>
+<li><a href="#toc_1.6">Books</a></li>
 </ul>
 </ul>
 </div>
@@ -220,6 +221,13 @@ http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js
 http://ajax.googleapis.com/ajax/libs/jquery/1.2/jquery.min.js
 </pre>
 
+<h2 id="toc_1.6">Books</h2>
+<ul>
+<li>
+<a href="http://jqfundamentals.com/book/index.html">jQuery Fundamentals</a> - jQuery 入门教程。
+</li>
+</ul>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -238,7 +246,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月21日 10:01:08</p>
+    <p>本页最后修订于 2011年03月01日 11:13:38</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
