--- a/mobile.html
+++ b/mobile.html
@@ -35,8 +35,49 @@
 </li>
 </ul>
 
+<h2 id="toc_1.1">Dopod 577W GPRS 设置</h2>
+<ol>
+<li>
+设置 -&gt; 链接 -&gt; GPRS
+</li>
+<li>
+如果有的话，删除所有的
+</li>
+<li>
+菜单 -&gt; 添加
+</li>
+<ol>
+<li>
+描述：CMNET(可随意)
+</li>
+<li>
+链接到：Internet
+</li>
+<li>
+连接点：CMNET
+</li>
+</ol>
+<li>
+菜单 -&gt; 添加
+</li>
+<ol>
+<li>
+描述：CMWAP(可随意)
+</li>
+<li>
+链接到：WAP网络
+</li>
+<li>
+连接点：cmwap
+</li>
+</ol>
+<li>
+另外可以下载GPRS设置包，安装即可。
+</li>
+</ol>
 
-<h2 id="toc_1.1"><a href="http://www.hzft.gov.cn">国税地税</a></h2>
+
+<h2 id="toc_1.2"><a href="http://www.hzft.gov.cn">国税地税</a></h2>
 <ul>
 <li>
 <a href="http://www.hzft.gov.cn/jpm/portal?action=infoDetailAction&amp;eventSubmit_doInfodetail=doInfodetail&amp;id=36312&amp;flag=123456">发票自动语音查询</a>
@@ -48,8 +89,45 @@
 </li>
 </ul>
 
+<h2 id="toc_1.3">杭州地税发票兑奖</h2>
 <p>
-浙江杭州国税发票中奖后，拨打 <code>12366</code> 并按 <code>1621</code>，然后输入发票代码，再输入下面的发票号码，密码。
+拨打 <code>12366</code>
+</p>
+<ol>
+<li>
+1   杭州国税地税发票查询
+</li>
+<li>
+7   发票兑奖
+</li>
+<li>
+1   自动语言服务
+</li>
+<li>
+1   键盘输入
+</li>
+<li>
+no.:8位发票号码
+</li>
+<li>
+pwd:10位密码
+</li>
+<li>
+1   确认
+</li>
+<li>
+1   充值
+</li>
+<li>
+1   本机充值
+</li>
+<li>
+1   确认
+</li>
+</ol>
+
+<p>
+1711No.#Pwd#1111
 </p>
 
 <script type="text/javascript">
@@ -70,7 +148,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月28日 11:06:54</p>
+    <p>本页最后修订于 2011年02月12日 09:25:55</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
