--- a/music (tianliangmatoiMac's conflicted copy 2011-03-16).html
+++ b/music (tianliangmatoiMac's conflicted copy 2011-03-16).html
@@ -7,7 +7,7 @@
 <!--[if IE]><script type="text/javascript" src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/vim-like.css" />
-<title>music - 闲耘™.Wiki</title>
+<title>music (tianliangmatoiMac's conflicted copy 2011-03-16) - 闲耘™.Wiki</title>
 </head>
 <body>
 <div id="wrapper">
@@ -94,10 +94,6 @@
 <a href="http://music.sina.com.cn/yueku/s/2230.html">Enya.恩雅</a>
 </li>
 <li>
-<a href="http://music.sina.com.cn/yueku/s/2874.html">Vangelis.范吉利斯</a>
-    <a href="http://www.google.cn/music/artist?id=Af08419208ceaf4ec">@google.music</a>
-</li>
-<li>
 <a href="http://music.sina.com.cn/yueku/s/24396.html">神姬(Himekami)</a>
 </li>
 <li>
@@ -132,10 +128,7 @@ Adventure Cargo - Eyes of the Jaguar
 Adventure Cargo - Morning In Paradise
 </li>
 <li>
-Ah Nee Mah - Canyon Dreams
-</li>
-<li>
-Andreas - Aurora
+Ah Nee Mah - The Enchanted Valley
 </li>
 <li>
 Andreas Vollenweider - The Grand Ball of the Duljas
@@ -150,9 +143,6 @@ Australis - Purple Dreams
 Catherine Lara - Unity
 </li>
 <li>
-Chris Field - Floating
-</li>
-<li>
 Chris Spheeris - Sapphire
 </li>
 <li>
@@ -160,12 +150,6 @@ Clannad - A Bridge That Carries Us Over
 </li>
 <li>
 Cusco - Montezuma
-</li>
-<li>
-Cusco - Tupac Amaru
-</li>
-<li>
-Craig Armstrong - Balcony Scene
 </li>
 <li>
 Diane Arkenstone - The Treasure Caves
@@ -213,13 +197,7 @@ Klaus Schonning - The Pedestrian Street
 Kitaro - Sacred Fountain
 </li>
 <li>
-Kitaro - Winds Blow Over The Hill
-</li>
-<li>
 Loreena McKennitt - Huron 'Beltane' Fire Dance
-</li>
-<li>
-Mehdi - Desert Oasis
 </li>
 <li>
 Mehdi - Eastern Sunset
@@ -237,13 +215,7 @@ R Arduini - Whispering Winds
 Super8 Tab Feat. Jan Burton - Free Love (Original Mix)
 </li>
 <li>
-Threefold - Besom
-</li>
-<li>
 Vangelis - Alpha
-</li>
-<li>
-Vangelis - Main Theme from Chariots of Fire
 </li>
 <li>
 Yanni - A Walk In The Rain
@@ -271,7 +243,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2011年04月05日 23:56:39</p>
+    <p>本页最后修订于 2011年03月13日 20:28:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
