--- a/snipMate.html
+++ b/snipMate.html
@@ -36,7 +36,7 @@
 <a href="http://blog.liancheng.info/?p=211">snipMate反引号转义补丁</a> (似乎没考虑偶数个反斜杠的问题。)
 </li>
 <li>
-<a href="http://lilydjwg.is-programmer.com/posts/22799">snipMate表达式扩展补丁</a>
+<a href="http://lilydjwg.is-programmer.com/posts/22799.html">snipMate表达式扩展补丁</a>
 </li>
 </ul>
 
@@ -75,7 +75,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月29日 14:59:13</p>
+    <p>本页最后修订于 2011年04月16日 01:53:59</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
