--- a/text-smile.html
+++ b/text-smile.html
@@ -65,7 +65,111 @@
 
 [̲̅V̲̅I̲̅P̅]
 [VIP]
+
+Coolest text faces!
+
+&lt;3~
+
+I♥U
+
+(^_^)∠※
+
+&lt;------3
+&lt;======3
+
+(¯`v´¯)
+.`·.¸.·´
+¸.·´¸.·´¨) ¸.·*¨)
+(¸.·´ (¸.·´
+
+ /////
+(*^_^*)\***/
+        \*/
+
+
+ (\_/)
+ (._.)
+ (   )
+(")_(")
+
+(\__/)
+(='.'=)
+(")_(")
+
+(\ /)
+(0.0)
+(   )
+(___)0
+
+(\ /)
+(^.^)
+(   )
+(___)0
+
+() ()
+( " )
+(   )
+(   )
+"   "
+
+(I/)__(I/)
+ ( ^.^ )
+
+ ^_^
+ ( )
+ ) (
+( Y )
+
+   /////
+  ( o o )
+-oo0(_)0oo-
+
+   _
+ _/_\_
+ ( " )
+// u \\
+\|  _|/
+ |   |
+ | I |
+ [ | ]
+
+/////0////0//////
+///////00////////
+////0//////0/////
+/////0////0//////
+//////0//0///////
+///////00////////
+
+..._...|...______________, ,
+....../'---__________---____|] = = = D
+...../_==O;;;;;;;;;_________.:/
+.....), ===.(_(__) /
+....//(..) ),----"
+...//____//
+..//_____//
+.//______//
+
+(-.(-.(-.(-.(-.-).-).-).-)-.)
+围观
+
+^___^ v
+
+(.)(.) &lt;-----O_O
+ ) (
+( Y )
+
+
 </pre>
+
+
+<ul>
+<li>
+<a href="http://www.douban.com/group/topic/5747789/">可爱到受不了的文字表情</a>
+</li>
+<li>
+<a href="http://bonny.idv.tw/www/exint/0213let.htm">文字表情</a>
+</li>
+</ul>
 
 <script type="text/javascript">
 function onSearch(){
@@ -85,7 +189,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年08月30日 15:22:30</p>
+    <p>本页最后修订于 2011年02月13日 22:45:12</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
